[gd_scene load_steps=23 format=2]

[ext_resource path="res://imageImports/container2.png" type="Texture" id=1]
[ext_resource path="res://imageImports/bar2.png" type="Texture" id=2]
[ext_resource path="res://imageImports/random.png" type="Texture" id=3]
[ext_resource path="res://scripts/onePlayer.gd" type="Script" id=4]
[ext_resource path="res://imageImports/tip.png" type="Texture" id=5]
[ext_resource path="res://imageImports/5050.png" type="Texture" id=6]
[ext_resource path="res://fonts/Cousine-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://myTheme.tres" type="Theme" id=8]
[ext_resource path="res://fonts/ComicNeue-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://imageImports/answerButton.png" type="Texture" id=10]
[ext_resource path="res://imageImports/gameOver.png" type="Texture" id=11]
[ext_resource path="res://imageImports/coin.png" type="Texture" id=12]
[ext_resource path="res://imageImports/back.png" type="Texture" id=13]
[ext_resource path="res://imageImports/saveMe.png" type="Texture" id=14]
[ext_resource path="res://imageImports/retry.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 9 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
size = 31
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 9 )

[node name="onePlayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.396078, 0.243137, 0.501961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameTypeAndLevel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 151.0
margin_bottom = 182.0
text = "Addition"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 98.0
margin_right = 100.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
radial_center_offset = Vector2( 0.135, 0 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="userBG" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -183.0
margin_top = -216.0
margin_right = 183.0
margin_bottom = 368.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="Label" parent="userBG"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -233.0
margin_bottom = -219.0
theme = ExtResource( 8 )
custom_fonts/font = SubResource( 1 )
text = "QUESTION"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="numOutOf" type="Label" parent="userBG"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -176.0
margin_bottom = -125.0
theme = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "0 out of 10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lifeLines" type="HBoxContainer" parent="userBG"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -2.0
margin_top = 196.0
margin_bottom = 266.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tip" type="Button" parent="userBG/lifeLines"]
margin_left = 12.0
margin_right = 130.0
margin_bottom = 70.0
text = "-100"
icon = ExtResource( 5 )
flat = true

[node name="fifty" type="Button" parent="userBG/lifeLines"]
margin_left = 134.0
margin_right = 243.0
margin_bottom = 70.0
text = "-50"
icon = ExtResource( 6 )
flat = true

[node name="random" type="Button" parent="userBG/lifeLines"]
margin_left = 247.0
margin_right = 356.0
margin_bottom = 70.0
text = "-50"
icon = ExtResource( 3 )
flat = true

[node name="options" type="GridContainer" parent="userBG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -164.0
margin_top = -83.0
margin_right = 164.0
margin_bottom = 83.0
theme = SubResource( 3 )
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer1" type="Button" parent="userBG/options"]
margin_right = 162.0
margin_bottom = 81.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 3 )
icon = ExtResource( 10 )
flat = true
clip_text = true

[node name="Label" type="Label" parent="userBG/options/answer1"]
modulate = Color( 0.396078, 0.243137, 0.501961, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer2" type="Button" parent="userBG/options"]
margin_left = 166.0
margin_right = 328.0
margin_bottom = 81.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 3 )
icon = ExtResource( 10 )
flat = true

[node name="Label" type="Label" parent="userBG/options/answer2"]
modulate = Color( 0.396078, 0.243137, 0.501961, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer3" type="Button" parent="userBG/options"]
margin_top = 85.0
margin_right = 162.0
margin_bottom = 166.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 3 )
icon = ExtResource( 10 )
flat = true

[node name="Label" type="Label" parent="userBG/options/answer3"]
modulate = Color( 0.396078, 0.243137, 0.501961, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer4" type="Button" parent="userBG/options"]
margin_left = 166.0
margin_top = 85.0
margin_right = 328.0
margin_bottom = 166.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 3 )
icon = ExtResource( 10 )
flat = true

[node name="Label" type="Label" parent="userBG/options/answer4"]
modulate = Color( 0.396078, 0.243137, 0.501961, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="."]
anchor_right = 1.0
margin_top = 135.0
margin_bottom = 165.0
size_flags_horizontal = 3
theme = ExtResource( 8 )

[node name="coinArea" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 120.0
margin_top = 97.0
margin_right = 183.0
margin_bottom = 137.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="coinArea"]
margin_left = -0.840881
margin_top = -1.26134
margin_right = 39.1591
margin_bottom = 38.7387
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coinCount" type="Label" parent="coinArea"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = -6.0
margin_bottom = 29.0
theme = ExtResource( 8 )
custom_fonts/font = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="globalCoins" type="Label" parent="coinArea"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -36.0
margin_top = -14.0
margin_right = 4.0
margin_bottom = 9.0
custom_fonts/font = SubResource( 7 )

[node name="backButton" type="TextureButton" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 70.0
margin_bottom = 70.0
texture_normal = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverScreen" type="PopupDialog" parent="."]
visible = true
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -183.0
margin_top = -345.0
margin_right = 197.0
margin_bottom = 329.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.898039, 0.215686, 0.215686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GameOverScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 45.0
margin_right = 100.0
margin_bottom = 205.0
texture = ExtResource( 11 )

[node name="saveMeButton" type="TextureButton" parent="GameOverScreen"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -235.0
margin_right = 90.0
margin_bottom = -174.0
texture_normal = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GameOverScreen/saveMeButton"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -26.0
margin_top = -34.0
margin_right = 14.0
margin_bottom = 6.0
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="GameOverScreen/saveMeButton"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -9.0
margin_top = -11.0
margin_right = 31.0
margin_bottom = 12.0
theme = ExtResource( 8 )
text = "200"

[node name="retryButton" type="TextureButton" parent="GameOverScreen"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -147.0
margin_right = 90.0
margin_bottom = -86.0
texture_normal = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="youScored" type="Label" parent="GameOverScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.0
margin_top = -43.5
margin_right = -87.0
margin_bottom = -20.5

[node name="coinsGotten" type="Label" parent="GameOverScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.0
margin_top = -14.5
margin_right = -87.0
margin_bottom = 8.5
[connection signal="pressed" from="userBG/lifeLines/tip" to="." method="autoAnswer"]
[connection signal="pressed" from="userBG/lifeLines/fifty" to="." method="_on_fifty_pressed"]
[connection signal="pressed" from="userBG/lifeLines/random" to="." method="_on_random_pressed"]
[connection signal="pressed" from="userBG/options/answer1" to="." method="answerButtonPressed" binds= [ 0 ]]
[connection signal="pressed" from="userBG/options/answer2" to="." method="answerButtonPressed" binds= [ 1 ]]
[connection signal="pressed" from="userBG/options/answer3" to="." method="answerButtonPressed" binds= [ 2 ]]
[connection signal="pressed" from="userBG/options/answer4" to="." method="answerButtonPressed" binds= [ 3 ]]
[connection signal="pressed" from="backButton" to="." method="_on_backButton_pressed"]
[connection signal="pressed" from="GameOverScreen/saveMeButton" to="." method="_on_saveMeButton_pressed"]
[connection signal="pressed" from="GameOverScreen/retryButton" to="." method="_on_retryButton_pressed"]
